<resources>
    <string name="app_name">Better Day</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="slash">|</string>
    <string name="purple">purple</string>
    <string name="pink">pink</string>
    <string name="blue">blue</string>
    <string name="yellow">yellow</string>
    <string name="red">red</string>
    <string name="green">green</string>
    <string name="delete">delete</string>
    <string name="change_color">change color</string>
    <string name="reminders">reminders</string>
    <string name="calendar">calendar</string>
    <string name="statistics">statistics</string>
    <string name="block">block</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="t">T</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="w">W</string>
    <string name="f">F</string>
</resources>