<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
            android:id="@+id/add_reminder_dialog_first_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bottom_dialog_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/x_button"
                    android:id="@+id/dialog_X"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"/>

            <TextView
                    android:text="New Reminder"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:textSize="20sp"
                    style="@style/primaryTextColor"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/dialog_title"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_text_input_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    app:boxBackgroundMode="filled"
                    app:boxStrokeErrorColor="@color/red"
                    app:errorIconTint="@color/red"
                    app:errorTextColor="@color/red"
                    app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title_text"
                        android:layout_width="221dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/input_background"
                        android:hint="Reminder name"
                        android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TimePicker
                    android:id="@+id/time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/primaryTextColor"
                    android:layout_marginTop="20dp"
                    android:timePickerMode="spinner"/>

            <androidx.cardview.widget.CardView
                    android:id="@+id/day_card"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                    <LinearLayout
                            android:id="@+id/choose_day"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:padding="10dp">
                        <ToggleButton
                                android:textOff="Ring once"
                                android:textOn="Ring once"
                                android:background="@drawable/day_button_selector"
                                android:checked="true"
                                android:enabled="false"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:layout_marginEnd="5dp"
                                android:layout_marginBottom="10dp"
                                android:id="@+id/ring_once"
                                android:layout_weight="1"/>
                        <ToggleButton
                                android:textOff="Every week"
                                android:textOn="Every week"
                                android:checked="false"
                                android:layout_marginStart="5dp"
                                android:background="@drawable/day_button_selector"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:layout_marginBottom="10dp"
                                android:id="@+id/every_week"
                                android:layout_weight="1"/>
                    </LinearLayout>
                    <LinearLayout
                            android:id="@+id/choose_weekday"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_gravity="center">
                        <ToggleButton
                                android:id="@+id/sunday"
                                android:textOff="@string/s"
                                android:textOn="@string/s"
                                android:layout_width="100dp"
                                android:layout_height="30dp"
                                android:background="@drawable/day_button_selector"
                                android:checked="false"
                                android:enabled="false"
                                android:layout_marginStart="2.5dp"
                                android:layout_marginEnd="2.5dp"
                                android:layout_weight="1"/>
                        <ToggleButton
                                android:id="@+id/monday"
                                android:textOff="@string/m"
                                android:textOn="@string/m"
                                android:layout_width="100dp"
                                android:layout_height="30dp"
                                android:background="@drawable/day_button_selector"
                                android:layout_marginStart="2.5dp"
                                android:layout_marginEnd="2.5dp"
                                android:checked="false"
                                android:enabled="false"
                                android:layout_weight="1"/>
                        <ToggleButton
                                android:id="@+id/tuesday"
                                android:textOff="@string/t"
                                android:textOn="@string/t"
                                android:layout_width="100dp"
                                android:layout_height="30dp"
                                android:background="@drawable/day_button_selector"
                                android:layout_marginStart="2.5dp"
                                android:layout_marginEnd="2.5dp"
                                android:checked="false"
                                android:enabled="false"
                                android:layout_weight="1"/>
                        <ToggleButton
                                android:id="@+id/wednesday"
                                android:textOff="@string/w"
                                android:textOn="@string/w"
                                android:layout_width="100dp"
                                android:layout_height="30dp"
                                android:background="@drawable/day_button_selector"
                                android:layout_marginStart="2.5dp"
                                android:layout_marginEnd="2.5dp"
                                android:checked="false"
                                android:enabled="false"
                                android:layout_weight="1"/>
                        <ToggleButton
                                android:id="@+id/thursday"
                                android:textOff="@string/t"
                                android:textOn="@string/t"
                                android:layout_width="100dp"
                                android:layout_height="30dp"
                                android:background="@drawable/day_button_selector"
                                android:layout_marginStart="2.5dp"
                                android:layout_marginEnd="2.5dp"
                                android:checked="false"
                                android:enabled="false"
                                android:layout_weight="1"/>
                        <ToggleButton
                                android:id="@+id/friday"
                                android:textOff="@string/f"
                                android:textOn="@string/f"
                                android:layout_width="100dp"
                                android:layout_height="30dp"
                                android:background="@drawable/day_button_selector"
                                android:layout_marginStart="2.5dp"
                                android:layout_marginEnd="2.5dp"
                                android:checked="false"
                                android:enabled="false"
                                android:layout_weight="1"/>
                        <ToggleButton
                                android:id="@+id/saturday"
                                android:textOff="@string/s"
                                android:textOn="@string/s"
                                android:layout_width="100dp"
                                android:layout_height="30dp"
                                android:background="@drawable/day_button_selector"
                                android:layout_marginStart="2.5dp"
                                android:layout_marginEnd="2.5dp"
                                android:checked="false"
                                android:enabled="false"
                                android:layout_weight="1"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Button
                    android:text="NEXT"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:layout_width="150dp"
                    android:layout_height="58dp"
                    android:id="@+id/next_button"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="21dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
